Fixed CV pdf page

--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
           
         
         <li>
-          <a itemprop="sameAs" href="https://fancheng.me/FanCV/" target="_blank" rel="noopener">
+          <a itemprop="sameAs" href="https://fancheng.me/FanCV" target="_blank" rel="noopener">
             <i class="ai ai-cv big-icon"></i>
           </a>
         </li>
