Set as featured, selected

--- a/publication/index.html
+++ b/publication/index.html
@@ -427,7 +427,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.1080/10618600.2020.1715226" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/arXiv:2103.11773" target="_blank" rel="noopener">
   DOI
 </a>
 
