--- a/talk/index.html
+++ b/talk/index.html
@@ -379,6 +379,14 @@
 
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://github.com/ffancheng/talks/tree/master/ANZSC2021" target="_blank" rel="noopener">
+  Code
+</a>
+
 
 
 
