--- a/talk/index.html
+++ b/talk/index.html
@@ -301,7 +301,7 @@
 
     
     <div class="article-style" itemprop="articleBody">
-      A talk at ANZSC2021 Machine Learning session. <a href="http://talks.fancheng.me/ANZSC2021"><em>Slides link</em></a>
+      A talk at ANZSC2021 Machine Learning session.
     </div>
     
 
