Add talk video link

--- a/talk/index.html
+++ b/talk/index.html
@@ -391,7 +391,9 @@
 
 
   
-    
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/mlann/">
+    Project
+  </a>
   
 
 
@@ -407,6 +409,14 @@
 </a>
 
 
+
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://youtu.be/8nlusizl7YI?t=4473" target="_blank" rel="noopener">
+  Video
+</a>
 
 
 
