--- a/index.html
+++ b/index.html
@@ -930,7 +930,9 @@
 
 
   
-    
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/mlann/">
+    Project
+  </a>
   
 
 
@@ -946,6 +948,14 @@
 </a>
 
 
+
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://youtu.be/8nlusizl7YI?t=4473" target="_blank" rel="noopener">
+  Video
+</a>
 
 
 
