Change talk location

--- a/talk/anzsc2021/index.html
+++ b/talk/anzsc2021/index.html
@@ -367,12 +367,6 @@
 
 
 
-  
-  <a class="btn btn-outline-primary my-1 mr-1" href="/project/mlann/">
-    Project
-  </a>
-  
-
 
 
 
@@ -573,12 +567,6 @@
 
 
 
-  
-  <a class="btn btn-outline-primary my-1 mr-1" href="/project/mlann/">
-    Project
-  </a>
-  
-
 
 
 
@@ -663,7 +651,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Location</div>
-          <div class="col-12 col-md-9">Melbourne, Australia (Online)</div>
+          <div class="col-12 col-md-9">Gold Coast, Australia (Online)</div>
         </div>
       </div>
       <div class="col-md-1"></div>
