--- a/index.html
+++ b/index.html
@@ -1637,7 +1637,8 @@ Github Setting Register for a Github account If you haven’t got an Github acco
     </div>
     <div class="col-12 col-lg-8">
       <!-- raw HTML omitted -->
-<p><!-- raw HTML omitted -->Tweets by @fanchengfc<!-- raw HTML omitted --></p>
+<!-- raw HTML omitted -->
+<!-- raw HTML omitted -->
 
     </div>
   
